--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,18 @@
 :root {
-    --bg-primary: #0C0F17;
+    --bg-primary: rgb(12, 15, 23);
     --bg-secondary: #141823;
+    --bg-secondary-hover: rgb(30, 34, 45);
+    --icon-color: rgb(200, 200, 200);
+    --icon-color-hover: white;
+    --text-primary: white;
+    --text-secondary: rgb(200, 200, 200);;
+    --border-color: rgb(30, 34, 45);
+    --border-color-hover: rgb(40, 44, 55);
+    --valid-color: rgb(76, 237, 76);
 }
 
 body {
     margin: 0;
+    padding: 0 80px;
     background-color: var(--bg-primary);
 }
