--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,13 @@
 
 body {
     margin: 0;
-    padding: 0 80px;
+    padding: 0 100px;
     background-color: var(--bg-primary);
+    *:focus {
+        outline: none;
+    }
+}
+
+* {
+    box-sizing: border-box;
 }
