--- a/src/Layout/NavigationSection/NavigationSection.css
+++ b/src/Layout/NavigationSection/NavigationSection.css
@@ -6,6 +6,7 @@
 
 .logo-container {
     width: 20%;
+    height: 100%;
 }
 
 .navigation-container {
@@ -17,4 +18,6 @@
 
 .profile-container {
     width: 20%;
+    display: flex;
+    align-items: center;
 }
