--- a/src/Layout/WinLayout/WinLayout.css
+++ b/src/Layout/WinLayout/WinLayout.css
@@ -72,7 +72,7 @@
 .settings-section-close-btn {
     font-size: 16px;
     color: var(--icon-color);
-    background-color: var(--bg-primary);
+    background-color: var(--bg-secondary);
     padding: 4px;
     border-radius: 50%;
     z-index: 2000;
@@ -88,11 +88,24 @@
 
 .settings-section-close-btn:hover {
     color: var(--icon-color-hover);
-    background-color: var(--bg-secondary);
+    background-color: var(--bg-tertiary);
     border: 1px solid var(--border-color-hover);
 }
 
 .settings-section-close-btn:active {
     background-color: white;
     color: black;
+}
+
+.documentation-section {
+    height: 85%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.documentation-img {
+    width: 80%;
+    border: 2px solid var(--border-color);
+    border-radius: 16px;
 }
