--- a/src/Components/Settings/Settings.css
+++ b/src/Components/Settings/Settings.css
@@ -1,7 +1,7 @@
 .settings-container {
     height: 75vh;
     width: 75vw;
-    background-color: var(--bg-primary);
+    background-color: var(--bg-secondary);
     border-radius: 16px;
     border: 1px solid var(--border-color);
 }
