--- a/src/Components/Controls/Controls.css
+++ b/src/Components/Controls/Controls.css
@@ -2,24 +2,45 @@
     background-color: var(--bg-secondary);
     display: flex;
     flex-direction: row;
-    gap: 22px;
-    padding: 12px 26px;
+    gap: 8px;
+    padding: 8px 22px;
+    min-height: 50px;
+    min-width: 160px;
     align-items: center;
     justify-content: center;
-    border-radius: 18px;
+    border-radius: 16px;
     border: 1px solid var(--border-color-hover);
 }
 
 .control-btn {
-    color: var(--icon-color);
-    font-size: 22px;
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 32px;
+    height: 32px;
+    font-size: 20px;
+    color: var(--icon-color);
+    background-color: transparent;
+    border:none;
+    border-radius: 8px;
     cursor: pointer;
 }
 
-.control-btn:hover {
+.control-btn:hover:not(:disabled) {
     color: var(--icon-color-hover);
-    transform: scale(1.2);
+    transform: scale(1.15);
+}
+
+.control-btn.active {
+    background-color: var(--valid-color-hover);
+    color: var(--icon-color-hover);
+    border-color: var(--border-color-hover);
+    transform: scale(1.15);
+}
+
+.control-btn:disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+    pointer-events: none;
+    transform: none;
 }
