--- a/src/Components/Settings/Settings.css
+++ b/src/Components/Settings/Settings.css
@@ -1,7 +1,163 @@
 .settings-container {
-    height: 75vh;
-    width: 75vw;
-    background-color: var(--bg-secondary);
-    border-radius: 16px;
-    border: 1px solid var(--border-color);
+  height: 75vh;
+  width: 75vw;
+  background-color: var(--bg-secondary);
+  border-radius: 16px;
+  border: 1px solid var(--border-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 20px;
+  overflow-y: auto;
+  font-family: system-ui;
+}
+
+.settings-container-title {
+  font-size: 18px;
+  margin-bottom: 50px;
+  color: var(--text-secondary);
+  text-align: center;
+}
+
+.dhcp-form {
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  position: relative;
+}
+
+.form-group label {
+  font-size: 14px;
+  color: var(--text-secondary);
+}
+
+/* Custom dropdown */
+.custom-dropdown {
+  position: relative;
+  user-select: none;
+  cursor: pointer;
+}
+.dropdown-selected {
+  padding: 10px;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  background-color: var(--bg-primary);
+  color: var(--text-primary);
+  font-size: 14px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.custom-dropdown.open .dropdown-selected {
+  border-color: var(--border-color-hover);
+  background-color: var(--bg-tertiary);
+}
+.dropdown-icon {
+  font-size: 16px;
+}
+.dropdown-items {
+  display: none;
+  position: absolute;
+  top: calc(100% + 4px);
+  left: 0;
+  width: 100%;
+  max-height: 200px;
+  overflow-y: auto;
+  border: 1px solid var(--border-color);
+  background-color: var(--bg-primary);
+  border-radius: 4px;
+  z-index: 10;
+}
+.custom-dropdown.open .dropdown-items {
+  display: block;
+}
+.dropdown-item {
+  padding: 8px 10px;
+  font-size: 14px;
+  color: var(--text-secondary);
+  background-color: var(--bg-secondary);
+  transition: all 0.2s ease;
+}
+.dropdown-item:hover {
+  background-color: var(--bg-tertiary);
+  color: var(--text-primary);
+}
+.dropdown-item.disabled {
+  color: var(--text-secondary);
+  cursor: default;
+}
+
+.form-group input {
+  padding: 10px;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  background-color: var(--bg-primary);
+  color: var(--text-primary);
+  font-size: 14px;
+  transition: border 0.2s, background-color 0.2s;
+}
+.form-group input:focus {
+  outline: none;
+  border-color: var(--border-color-hover);
+  background-color: var(--bg-tertiary);
+}
+
+.pool-range-inputs {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.pool-range-inputs input {
+  flex: 1;
+}
+.right-chevron {
+  color: var(--text-secondary);
+  font-size: 18px;
+}
+
+.save-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  font-size: 16px;
+  color: var(--icon-color);
+  background-color: var(--bg-primary);
+  border: 1px solid var(--border-color);
+  padding: 10px 16px;
+  width: 120px;
+  margin: 10px auto 0;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.2s, color 0.2s, border 0.2s;
+}
+.save-button:hover {
+  background-color: var(--bg-tertiary);
+  border-color: var(--border-color-hover);
+  color: var(--icon-color-hover);
+}
+
+.message-container {
+  height: 20px;
+}
+.save-message {
+  text-align: center;
+  font-size: 0.8rem;
+  padding: 0;
+}
+.save-message.success {
+  color: var(--valid-color);
+}
+.save-message.error {
+  color: red;
 }
