--- a/src/Components/Settings/Settings.css
+++ b/src/Components/Settings/Settings.css
@@ -3,14 +3,83 @@
   width: 75vw;
   background-color: var(--bg-secondary);
   border-radius: 16px;
+  border: 1px solid var(--border-color-hover);
+  display: flex;
+  flex-direction: row;
+  overflow-y: auto;
+  font-family: system-ui;
+}
+
+.settings-container-left{
+  width: 20%;
+  border-right: 1px solid var(--border-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 0;
+  gap: 10px;
+}
+
+.settings-container-left-btn-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  min-width: 85%;
+  min-height: 40px;
+  background-color: var(--bg-tertiary);
+  padding: 0 16px;
+  border-radius: 8px;
+  cursor: pointer;
   border: 1px solid var(--border-color);
+  gap: 4px;
+}
+
+.settings-container-left-btn-container:hover {
+  background-color: var(--bg-quaternary);
+}
+
+.settings-container-left-btn-container.active {
+  background-color: var(--bg-quaternary);
+  border: 1px solid var(--border-color-hover);
+}
+
+.settings-container-left-btn-container.active .settings-container-left-icon {
+  color: var(--text-primary);
+}
+
+.settings-container-left-btn-container.active .settings-container-left-btn {
+  color: var(--text-primary);
+}
+
+.settings-container-left-icon{
+  color: var(--text-secondary);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.settings-container-left-btn{
+  background-color: transparent;
+  border: none;
+  font-size: 0.95rem;
+  color: var(--text-secondary);
+}
+
+.settings-container-right-server{
+  width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 30px 20px;
-  overflow-y: auto;
-  font-family: system-ui;
+}
+
+.settings-container-right-client{
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .settings-container-title {
@@ -40,7 +109,6 @@
   color: var(--text-secondary);
 }
 
-/* Custom dropdown */
 .custom-dropdown {
   position: relative;
   user-select: none;
@@ -141,10 +209,17 @@
   cursor: pointer;
   transition: background-color 0.2s, color 0.2s, border 0.2s;
 }
+
 .save-button:hover {
   background-color: var(--bg-tertiary);
   border-color: var(--border-color-hover);
   color: var(--icon-color-hover);
+}
+
+.save-button:active {
+  background-color: white;
+  border-color: var(--border-color-hover);
+  color: black;
 }
 
 .message-container {
@@ -159,5 +234,5 @@
   color: var(--valid-color);
 }
 .save-message.error {
-  color: red;
+  color: var(--invalid-color);
 }
