--- a/src/Layout/NavigationSection/NavigationSection.css
+++ b/src/Layout/NavigationSection/NavigationSection.css
@@ -16,8 +16,35 @@
     width: 60%;
 }
 
+.connection-container {
+    width: 7.5%;
+    display: flex;
+    align-items: center;
+    padding: 0 5px;
+}
+
+.connection-icon-container {
+    background-color: var(--bg-secondary);
+    font-size: 18.5px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--border-color);
+    border-radius: 10px;
+    margin-left: auto;
+}
+
+.connected {
+    color: var(--valid-color);
+}
+
+.disconnected {
+    color: var(--invalid-color);
+}
+
 .profile-container {
-    width: 20%;
+    width: 12.5%;
     display: flex;
     align-items: center;
 }
