--- a/src/Layout/NavigationSection/NavigationSection.css
+++ b/src/Layout/NavigationSection/NavigationSection.css
@@ -4,9 +4,12 @@
     height: 100%;
 }
 
-.logo-container {
+.power-container {
     width: 20%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .navigation-container {
