--- a/src/Components/Settings/Settings.css
+++ b/src/Components/Settings/Settings.css
@@ -218,7 +218,7 @@
 
 .save-button:active {
   background-color: white;
-  border-color: var(--border-color-hover);
+  border-color: black;
   color: black;
 }
 
