--- a/src/Layout/WinLayout/WinLayout.css
+++ b/src/Layout/WinLayout/WinLayout.css
@@ -95,6 +95,7 @@
 .settings-section-close-btn:active {
     background-color: white;
     color: black;
+    border: 1px solid black;
 }
 
 .documentation-section {
