--- a/src/Components/Settings/Settings.css
+++ b/src/Components/Settings/Settings.css
@@ -5,12 +5,11 @@
   border-radius: 16px;
   border: 1px solid var(--border-color-hover);
   display: flex;
-  flex-direction: row;
   overflow-y: auto;
   font-family: system-ui;
 }
 
-.settings-container-left{
+.settings-container-left {
   width: 20%;
   border-right: 1px solid var(--border-color);
   display: flex;
@@ -22,9 +21,8 @@
 
 .settings-container-left-btn-container {
   display: flex;
-  flex-direction: row;
   align-items: center;
-  min-width: 85%;
+  width: 85%;
   min-height: 40px;
   background-color: var(--bg-tertiary);
   padding: 0 16px;
@@ -33,53 +31,28 @@
   border: 1px solid var(--border-color);
   gap: 4px;
 }
-
-.settings-container-left-btn-container:hover {
-  background-color: var(--bg-quaternary);
-}
-
+.settings-container-left-btn-container:hover,
 .settings-container-left-btn-container.active {
   background-color: var(--bg-quaternary);
-  border: 1px solid var(--border-color-hover);
+  border-color: var(--border-color-hover);
 }
-
-.settings-container-left-btn-container.active .settings-container-left-icon {
-  color: var(--text-primary);
-}
-
-.settings-container-left-btn-container.active .settings-container-left-btn {
-  color: var(--text-primary);
-}
-
-.settings-container-left-icon{
+.settings-container-left-icon {
   color: var(--text-secondary);
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font-size: 20px;
 }
-
-.settings-container-left-btn{
-  background-color: transparent;
+.settings-container-left-btn {
+  background: none;
   border: none;
   font-size: 0.95rem;
   color: var(--text-secondary);
 }
 
-.settings-container-right-server{
+.settings-container-right {
   width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-}
-
-.settings-container-right-client{
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  padding: 60px 0;
 }
 
 .settings-container-title {
@@ -89,12 +62,20 @@
   text-align: center;
 }
 
+.conf-container {
+  min-width: 450px;
+  min-height: 450px;
+  display: flex;
+  flex-direction: column;
+}
+
 .dhcp-form {
   width: 100%;
   max-width: 500px;
   display: flex;
   flex-direction: column;
   gap: 20px;
+  flex: 1;
 }
 
 .form-group {
@@ -119,19 +100,15 @@
   border: 1px solid var(--border-color);
   border-radius: 4px;
   background-color: var(--bg-primary);
-  color: var(--text-primary);
-  font-size: 14px;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-size: 14px;
+  color: var(--text-primary);
 }
 .custom-dropdown.open .dropdown-selected {
   border-color: var(--border-color-hover);
   background-color: var(--bg-tertiary);
-}
-.dropdown-icon {
-  font-size: 16px;
 }
 .dropdown-items {
   display: none;
@@ -152,27 +129,21 @@
 .dropdown-item {
   padding: 8px 10px;
   font-size: 14px;
-  color: var(--text-secondary);
   background-color: var(--bg-secondary);
-  transition: all 0.2s ease;
+  color: var(--text-secondary);
 }
 .dropdown-item:hover {
   background-color: var(--bg-tertiary);
   color: var(--text-primary);
-}
-.dropdown-item.disabled {
-  color: var(--text-secondary);
-  cursor: default;
 }
 
 .form-group input {
   padding: 10px;
   border: 1px solid var(--border-color);
   border-radius: 4px;
-  background-color: var(--bg-primary);
   color: var(--text-primary);
+  background-color: var(--bg-primary);
   font-size: 14px;
-  transition: border 0.2s, background-color 0.2s;
 }
 .form-group input:focus {
   outline: none;
@@ -189,8 +160,8 @@
   flex: 1;
 }
 .right-chevron {
-  color: var(--text-secondary);
   font-size: 18px;
+  color: var(--text-secondary);
 }
 
 .save-button {
@@ -199,17 +170,15 @@
   justify-content: center;
   gap: 8px;
   font-size: 16px;
-  color: var(--icon-color);
   background-color: var(--bg-primary);
   border: 1px solid var(--border-color);
   padding: 10px 16px;
   width: 120px;
-  margin: 10px auto 0;
+  margin: auto auto 0 auto;
   border-radius: 8px;
   cursor: pointer;
-  transition: background-color 0.2s, color 0.2s, border 0.2s;
+  color: var(--icon-color);
 }
-
 .save-button:hover {
   background-color: var(--bg-tertiary);
   border-color: var(--border-color-hover);
@@ -222,17 +191,13 @@
   color: black;
 }
 
+
 .message-container {
   height: 20px;
 }
 .save-message {
   text-align: center;
   font-size: 0.8rem;
-  padding: 0;
 }
-.save-message.success {
-  color: var(--valid-color);
-}
-.save-message.error {
-  color: var(--invalid-color);
-}
+.save-message.success { color: var(--valid-color); }
+.save-message.error   { color: var(--invalid-color); }
