--- a/src/Layout/WinLayout/WinLayout.css
+++ b/src/Layout/WinLayout/WinLayout.css
@@ -110,3 +110,32 @@
     border: 2px solid var(--border-color);
     border-radius: 16px;
 }
+
+.save-section-close-btn {
+    font-size: 16px;
+    color: var(--icon-color);
+    background-color: var(--bg-secondary);
+    padding: 4px;
+    border-radius: 50%;
+    z-index: 2000;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--border-color);
+    cursor: pointer;
+ 
+    left: 59%;
+}
+
+.save-section-close-btn:hover {
+    color: var(--icon-color-hover);
+    background-color: var(--bg-tertiary);
+    border: 1px solid var(--border-color-hover);
+}
+
+.save-section-close-btn:active {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+}
