--- a/src/Components/Settings/Settings.css
+++ b/src/Components/Settings/Settings.css
@@ -180,7 +180,7 @@
   color: var(--icon-color);
 }
 .save-button:hover {
-  background-color: var(--bg-tertiary);
+  background-color: var(--bg-secondary-hover);
   border-color: var(--border-color-hover);
   color: var(--icon-color-hover);
 }
