--- a/src/Components/Output/Output.css
+++ b/src/Components/Output/Output.css
@@ -26,11 +26,12 @@
   border-left: 2px solid #3498db;
   transition: transform 0.2s ease;
   padding-left: 18px;
-}
-
-.even-item {
   background-color: var(--border-color);
 }
+
+/* .even-item {
+  background-color: var(--border-color);
+} */
 
 .info-label {
   color: var(--text-secondary);
