--- a/src/Components/CarProfile/CarProfile.css
+++ b/src/Components/CarProfile/CarProfile.css
@@ -11,7 +11,8 @@
 
 .car-title {
     height: 10%;
-    color: var(--text-primary);
+    /* color: var(--text-primary); */
+    color: rgba(245, 219, 23, 0.9);
     display: flex;
     align-items: center;
     font-size: 1.4rem;
@@ -33,12 +34,13 @@
 }
 
 .logo-img {
-    height: 232px;
+    height: 200px;
     opacity: 0.15;
+    margin-right: 25px;
 }
 
 .car-img {
-    height: 350px;
+    height: 340px;
 }
 
 .car-status {
